<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<packaging>pom</packaging>

	<groupId>org.greencloud</groupId>
	<artifactId>green-cloud</artifactId>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>engine</module>
		<module>application</module>
		<module>gui</module>
		<module>test</module>
		<module>commons</module>
		<module>knowledge-database</module>
		<module>managing-system</module>
	</modules>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- JADE Dependencies-->
			<dependency>
				<groupId>com.tilab.jade</groupId>
				<artifactId>jade</artifactId>
				<version>4.5.0</version>
				<scope>system</scope>
				<systemPath>${project.basedir}/lib/jade.jar</systemPath>
			</dependency>
			<dependency>
				<groupId>com.tilab.jade</groupId>
				<artifactId>jade-misc</artifactId>
				<version>2.8.0</version>
				<scope>system</scope>
				<systemPath>${project.basedir}/lib/jade-misc-2.8.0.jar</systemPath>
			</dependency>
			<dependency>
				<groupId>com.tilab.jade</groupId>
				<artifactId>jade-test-suite</artifactId>
				<version>1.13.0</version>
				<scope>system</scope>
				<systemPath>${project.basedir}/lib/jade-test-suite-1.13.0.jar</systemPath>
			</dependency>
			<!-- Logging -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>2.7</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>2.7</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>2.7</version>
			</dependency>
			<!-- Jackson -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.13.2</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.13.2</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.13.2</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-xml</artifactId>
				<version>2.10.2</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>2.13.2</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-guava</artifactId>
				<version>2.13.2</version>
			</dependency>
			<!-- Immutables -->
			<dependency>
				<groupId>org.immutables</groupId>
				<artifactId>value</artifactId>
				<version>2.8.2</version>
				<scope>provided</scope>
			</dependency>
			<!-- Apache IO -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.11.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
